# Raytracing_HPC

./: .gitignore
Raytracing/: CMakeLists.txt  Doxyfile  README.md
Raytracing/docs/: architecture.md  implementation-details.md  overview.md  rendering.md  scene-setup.md
Raytracing/src/: AxisAlignedRect.cpp  AxisAlignedRect.h  Box.h  Camera.h  Color.cpp  Color.h  Hittable.h  HittableList.h  Light.h  Material.h  PngWriter.h  Ray.h  RenderConfig.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Sphere.h  Utils.cpp  Utils.h  Vec3.cpp  Vec3.h  main.cpp
Raytracing/src/output/main.dSYM/Contents/Resources/DWARF/: main
Raytracing/src/output/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
Raytracing_simple/build-debug/: CMakeCache.txt  Makefile  cmake_install.cmake  raytracer
Raytracing_simple/build-debug/raytracer.dSYM/Contents/Resources/DWARF/: raytracer
Raytracing_simple/build-debug/raytracer.dSYM/Contents/Resources/Relocations/aarch64/: raytracer.yml
Raytracing_simple/src/: AxisAlignedRect.cpp  AxisAlignedRect.h  Box.h  Color.cpp  Color.h  InlineControl.h  Light.h  PngWriter.cpp  PngWriter.h  Ray.h  RenderConfig.h  Renderer.h  Scene.h  Sphere.h  Utils.cpp  Utils.h  Vec3.h  main.cpp
Raytracing_simple/src/output/: main
Raytracing_simple/src/output/main.dSYM/Contents/Resources/DWARF/: main
